--- a/screenSound/src/main/resources/application.properties
+++ b/screenSound/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=screenSound
+spring.datasource.url=jdbc:postgresql://localhost/screensound_db
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
